# Trabalho-ML-Tweets

./: README.md  distil_bert_model.ipynb  pyproject.toml  tf_idf_logistic_regression.ipynb  tf_idf_xgboost.ipynb
resultados/: submission_logreg.csv  submission_xgboost.csv
src/: utils.py
