[project]
name = "tde-linguagem-natural"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "jinja2>=3.1.6",
    "keras-core>=0.1.7",
    "keras-nlp>=0.22.2",
    "matplotlib>=3.10.6",
    "numpy>=2.1.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.1",
    "xgboost>=3.0.5",
]
